--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-access-portal/logs/
 access-portal/backend/globalVariables/passwordFile.inc
+access-portal/logs/
+contributor-lists/private/
+sql/private/
+access-portal/asc.gif
+access-portal/bg.gif
+access-portal/desc.gif
+access-portal/jquery*.js
+access-portal/jquery.tablesorter.js
+access-portal/anchor.min.js
+access-portal/style.css
 access-portal/images/
